--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,33 @@
   <groupId>org.github.torand</groupId>
   <artifactId>openapi2java</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+
   <packaging>maven-plugin</packaging>
 
   <name>OpenAPI Java Generator Maven Plugin</name>
   <description>Maven plugin to generate Java model and REST clients from an OpenAPI specification</description>
   <url>https://github.com/torand/openapi2java</url>
 
+  <developers>
+    <developer>
+      <id>torand</id>
+      <name>Tore Eide Andersen</name>
+      <email>tore at nordmyrvegen.net</email>
+    </developer>
+  </developers>
+
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
+
+  <scm>
+    <connection>scm:git:https://github.com/torand/openapi2java.git</connection>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
     <dependency>
