--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
             <version>${central-publishing-maven-plugin.version}</version>
             <extensions>true</extensions>
             <configuration>
+              <deploymentName>${project.groupId}:${project.artifactId}@${project.version}</deploymentName>
               <publishingServerId>central</publishingServerId>
               <tokenAuth>true</tokenAuth>
               <autoPublish>true</autoPublish>
@@ -225,7 +226,7 @@
             <executions>
               <execution>
                 <id>attach-sources</id>
-                <phase>verify</phase>
+                <phase>package</phase>
                 <goals>
                   <goal>jar-no-fork</goal>
                 </goals>
@@ -239,6 +240,7 @@
             <executions>
               <execution>
                 <id>attach-javadocs</id>
+                <phase>package</phase>
                 <goals>
                   <goal>jar</goal>
                 </goals>
